# softrag

./: .gitignore  README.md  main.py  pyproject.toml  softrag_llm.md
.github/workflows/: ci.yml  python-publish.yml
docs/: softrag.md
examples/: local.py
exemples/: simple.py
softrag/: softrag.py
src/examples/: image.py  local.py  simple.py
src/softrag/: softrag.py
