[project]
name = "softrag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain>=0.3.25",
    "langchain-openai>=0.3.16",
    "openai>=1.78.1",
    "pymupdf>=1.25.5",
    "sqlite-vec>=0.1.6",
    "trafilatura>=2.0.0",
]


[tool.setuptools.packages.find]    
where = ["."]
include = ["softrag*"]              
exclude = ["exemples*", "tests*"]  
